syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.inspur.oam.configupdateresult";
option java_outer_classname = "ConfigUpdateResult";
option objc_class_prefix = "CRN";

package configupdateresult;

service ConfigUpdateResultService {
  rpc cfgUpdateResult(CfgResultNotifyReq) returns (CfgResultNotifyResp) {}
}

message CfgResultNotifyReq
{
  string NfType = 1;
  string InstanceId = 2;
  string TaskId = 3;
  string Result = 4; // task  status 0 succ 1 failed
}

message CfgResultNotifyResp
{
  string Result = 1; // 0 succ 1 failed 2 need reboot
}